# PhaseWrap

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .zenodo.json  AGENTS.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.reviewer  NOTICE  PATENTS.md  README.md  REVIEWER_START.md  pyproject.toml  pyrightconfig.json  requirements-review.txt
data/: amazon.jsonl  imdb.jsonl  yelp.jsonl
docs/: index.md  reproducible-environment.md  roadmap.md  stage-to-claim-map.md
logs/: checkpoint.json
scripts/: generate_publication_figures.py  ibm_runtime_check.py  preregister_stage4_replication_packets.py  quandela_cloud_check.py  run_automated_stage_gates.py  run_braket_hardware_smoke.py  run_stage103_robustness_metric_preregistration.py  run_stage104_matched_packet_execution_package.py  run_stage106_hardware_execution_preflight.py  run_stage10_small_decoder_transformer.py  run_stage113_job_result_evidence_assembler.py  run_stage115_provider_result_collector.py  run_stage116_provider_runner_plan.py  run_stage117_provider_runner_guard_audit.py  run_stage11_phasewrap_theory.py  run_stage120_live_runner_orchestration_audit.py  run_stage122_provider_adapter_skeleton_audit.py  run_stage127_injected_client_submitter_audit.py  run_stage134_runner_result_intake_alignment_audit.py  run_stage135_post_collection_claim_gate_sequence.py  run_stage136_auditability_metric_preregistration.py  run_stage137_auditability_metric_evaluator.py  run_stage139_provider_action_readiness_checklist.py  run_stage141_provider_unlock_priority.py  run_stage154_simulated_hardware_go_no_go.py  (+58 more)
(+2111 files in other folders)
