[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qrope"
version = "0.1.0"
description = "PhaseWrap negative-results evidence and reviewer-verification tooling"
readme = "README.md"
license = "AGPL-3.0-only"
classifiers = [
  "Programming Language :: Python :: 3",
]
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0",
  "numpy>=1.24",
  "autograd>=1.8",
  "pylatexenc>=2.10",
  "requests>=2.31"
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3",
  "pytest-cov>=5.0",
]
figures = [
  "matplotlib>=3.8",
]
ibm = [
  "qiskit>=1.0",
  "qiskit-ibm-runtime>=0.25",
]
braket = [
  "amazon-braket-sdk>=1.90",
  "boto3>=1.34",
]
quandela = [
  "perceval-quandela>=0.12",
]
hardware = [
  "qiskit>=1.0",
  "qiskit-ibm-runtime>=0.25",
  "amazon-braket-sdk>=1.90",
  "boto3>=1.34",
  "perceval-quandela>=0.12",
]
transformer = [
  "autograd>=1.8",
]

[project.scripts]
phasewrap-verify = "qrope.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
